--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,9 @@ services:
     web:
         build: .
         ports:
-        - "80:80"
+        - "8080:80"
+        depends_on:
+        - db
     db:
         image: mysql
         ports:
@@ -12,4 +14,4 @@ services:
             MYSQL_ROOT_PASSWORD: 123456
             MYSQL_USER: dev
             MYSQL_PASSWORD: 123456
-            MYSQL_DATABASE: myapp
+            MYSQL_DATABASE: theblog
