--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
         depends_on:
         - db
     db:
+        command: mysqld --user=root --sql_mode=""
         image: mysql
         ports:
         - "3306:3306"
@@ -15,3 +16,4 @@ services:
             MYSQL_USER: dev
             MYSQL_PASSWORD: 123456
             MYSQL_DATABASE: theblog
+            SQL_MODE: ""
